fallback for galery media and overflow fix

--- a/Resources/Public/scss/main.scss
+++ b/Resources/Public/scss/main.scss
@@ -769,7 +769,7 @@ main#scope{
     
     .text-content{
         max-height: 100%;
-        overflow-y: scroll;
+        overflow-y: hidden;
     }
 }
 
